--- a/index.html
+++ b/index.html
@@ -93,27 +93,29 @@
   <div id="google_translate_element" class="visually-hidden" aria-hidden="true"></div>
 
   <!-- Шапка -->
-  <header class="header" id="sticky-header" role="banner">
-    <div class="container header-flex">
-      <a href="index.html" class="logo-link" aria-label="На главную">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58 — Ассенизатор Пенза, откачка канализации" title="Ассенизатор Золотарь 58 в Пензе" width="48" height="48" loading="eager">
-        <span class="logo-title">Золотарь 58</span>
-      </a>
+  <header class="header" id="sticky-header">
+  <div class="container header-flex">
+    <a href="index.html" class="logo-link">…</a>
+    <a href="index.html" class="header-title-mobile">Золотарь 58</a>
 
-      <a href="index.html" class="header-title-mobile">Золотарь 58</a>
+    <nav class="nav" aria-label="Основное меню" id="main-menu">
+      <a href="services.html" class="nav-link">Услуги</a>
+      <a href="about.html" class="nav-link">О компании</a>
+      <a href="licenses.html" class="nav-link">Сертификаты</a>
+      <a href="contacts.html" class="nav-link">Контакты</a>
 
-      <nav class="nav" aria-label="Основное меню" id="main-menu">
-        <a class="nav-link" href="services.html">Услуги</a>
-        <a class="nav-link" href="about.html">О компании</a>
-        <a class="nav-link" href="licenses.html">Сертификаты</a>
-        <a class="nav-link" href="contacts.html">Контакты</a>
-      </nav>
+      <!-- ПЕРЕНЕСЁННЫЙ ПЕРЕКЛЮЧАТЕЛЬ -->
+      <div class="lang-switcher" aria-label="Выбор языка">
+        <button type="button" class="lang-btn" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
+        <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
+      </div>
+    </nav>
 
-      <button class="burger" aria-label="Открыть меню" aria-expanded="false" aria-controls="main-menu">
-        <span></span>
-      </button>
-    </div>
-  </header>
+    <button class="burger" aria-label="Открыть меню" aria-expanded="false" aria-controls="main-menu">
+      <span></span>
+    </button>
+  </div>
+</header>
 
   <!-- Инфо-полоска -->
   <div class="working-now-bar" role="status" aria-live="polite">
