--- a/services.html
+++ b/services.html
@@ -47,24 +47,29 @@
     </div>
   <div id="google_translate_element" class="visually-hidden" aria-hidden="true"></div>
 
-  <header class="header" role="banner">
-    <div class="container header-flex">
-      <a href="index.html" class="logo-link" aria-label="На главную">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
-        <span class="logo-title">Золотарь 58</span>
-      </a>
-      <a href="index.html" class="header-title-mobile">Золотарь 58</a>
-      <nav class="nav" aria-label="Основное меню" id="main-menu">
-        <a href="services.html" class="active nav-link" aria-current="page">Услуги</a>
-        <a href="about.html" class="nav-link">О компании</a>
-        <a href="licenses.html" class="nav-link">Сертификаты</a>
-        <a href="contacts.html" class="nav-link">Контакты</a>
-      </nav>
-      <button class="burger" aria-label="Открыть меню" aria-expanded="false" aria-controls="main-menu">
-        <span></span>
-      </button>
-    </div>
-  </header>
+  <header class="header" id="sticky-header">
+  <div class="container header-flex">
+    <a href="index.html" class="logo-link">…</a>
+    <a href="index.html" class="header-title-mobile">Золотарь 58</a>
+
+    <nav class="nav" aria-label="Основное меню" id="main-menu">
+      <a href="services.html" class="nav-link">Услуги</a>
+      <a href="about.html" class="nav-link">О компании</a>
+      <a href="licenses.html" class="nav-link">Сертификаты</a>
+      <a href="contacts.html" class="nav-link">Контакты</a>
+
+      <!-- ПЕРЕНЕСЁННЫЙ ПЕРЕКЛЮЧАТЕЛЬ -->
+      <div class="lang-switcher" aria-label="Выбор языка">
+        <button type="button" class="lang-btn" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
+        <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
+      </div>
+    </nav>
+
+    <button class="burger" aria-label="Открыть меню" aria-expanded="false" aria-controls="main-menu">
+      <span></span>
+    </button>
+  </div>
+</header>
 
   <div class="working-now-bar" role="status" aria-live="polite">
     <span class="working-icon" style="margin-right:8px;" aria-hidden="true">💧</span>
