--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
 
   <header class="header" id="sticky-header">
   <div class="container header-flex">
-    <a href="index.html" class="logo-link">…</a>
+    <a href="index.html" class="logo-link">logo.png</a>
     <a href="index.html" class="header-title-mobile">Золотарь 58</a>
 
     <nav class="nav" aria-label="Основное меню" id="main-menu">
