--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <!-- Шапка -->
   <header class="header" id="sticky-header">
   <div class="container header-flex">
-    <a href="index.html" class="logo-link">…</a>
+    <a href="index.html" class="logo-link">logo.png</a>
     <a href="index.html" class="header-title-mobile">Золотарь 58</a>
 
     <nav class="nav" aria-label="Основное меню" id="main-menu">
