--- a/contacts.html
+++ b/contacts.html
@@ -63,11 +63,15 @@
     </div>
   </header>
 
-  <!-- Инфополоса -->
-  <div class="working-now-bar" role="status" aria-live="polite">
-    <span class="working-icon" aria-hidden="true">💧</span>
-    Работаем сейчас <span class="dot" aria-hidden="true">•</span> Пушанина 46а, Пенза
-  </div>
+ <!-- Инфо-плашка -->
+<div class="working-now-bar" id="wnb" role="status" aria-live="polite">
+  <span class="working-icon" aria-hidden="true">💧</span>
+  <span class="wnb-label">На связи 24/7</span>
+  <span class="wnb-sep">•</span>
+  <span class="wnb-addr">Пушанина 46а, Пенза</span>
+  <button class="wnb-close" aria-label="Скрыть плашку" title="Скрыть">&times;</button>
+</div>
+
 
   <main id="main">
     <section class="main-intro">
