--- a/index.html
+++ b/index.html
@@ -121,10 +121,15 @@
     </div>
   </header>
 
-  <!-- Инфо-полоска -->
-  <div class="working-now-bar" role="status" aria-live="polite">
-    <span class="emoji" aria-hidden="true">💧</span> Работаем сейчас &nbsp;<span class="dot" aria-hidden="true">•</span>&nbsp; Пушанина 46а, Пенза
-  </div>
+<!-- Инфо-плашка -->
+<div class="working-now-bar" id="wnb" role="status" aria-live="polite">
+  <span class="working-icon" aria-hidden="true">💧</span>
+  <span class="wnb-label">На связи 24/7</span>
+  <span class="wnb-sep">•</span>
+  <span class="wnb-addr">Пушанина 46а, Пенза</span>
+  <button class="wnb-close" aria-label="Скрыть плашку" title="Скрыть">&times;</button>
+</div>
+
 
   <!-- Основной контент -->
   <main id="main">
