--- a/licenses.html
+++ b/licenses.html
@@ -27,11 +27,11 @@
 </head>
 <body>
   <!-- Языковой переключатель + скрытый элемент Google -->
- <div class="lang-switcher" aria-label="Выбор языка">
+  <div class="lang-switcher" aria-label="Выбор языка">
       <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
       <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
     </div>
-  <div id="google_translate_element" class="visually-hidden"></div>
+  <div id="google_translate_element" class="visually-hidden" aria-hidden="true"></div>
 
   <header class="header" id="sticky-header">
     <div class="container header-flex">
