--- a/services.html
+++ b/services.html
@@ -37,55 +37,35 @@
   </script>
 </head>
 <body>
-  <!-- Ссылка пропуска к основному контенту -->
-  <a class="skip-link" href="#main">К основному содержимому</a>
-
   <!-- Языковой переключатель + скрытый элемент Google -->
- <div class="lang-switcher" aria-label="Выбор языка">
-      <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
-      <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
-    </div>
-  <div id="google_translate_element" class="visually-hidden" aria-hidden="true"></div>
+  <div class="lang-switcher" aria-label="Выбор языка">
+    <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
+    <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
+  </div>
+  <div id="google_translate_element" class="visually-hidden"></div>
 
-  <header class="header" id="sticky-header">
+  <header class="header">
     <div class="container header-flex">
-      <a href="index.html" class="logo-link" aria-label="На главную">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58" width="60" height="60" loading="eager">
+      <a href="index.html" class="logo-link">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
-
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
-
-      <nav class="nav" aria-label="Основное меню" id="main-menu">
-        <a href="services.html" class="nav-link">Услуги</a>
-        <a href="about.html" class="nav-link">О компании</a>
-        <a href="licenses.html" class="nav-link">Сертификаты</a>
-        <a href="contacts.html" class="nav-link">Контакты</a>
-
-        <!-- Переключатель языка размещён внутри меню -->
-        <div class="lang-switcher" aria-label="Выбор языка">
-          <button type="button" class="lang-btn" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
-          <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
-        </div>
+      <nav class="nav">
+        <a href="services.html" class="active">Услуги</a>
+        <a href="about.html">О компании</a>
+        <a href="licenses.html">Сертификаты</a>
+        <a href="contacts.html">Контакты</a>
       </nav>
-
-      <button class="burger" aria-label="Открыть меню" aria-expanded="false" aria-controls="main-menu">
-        <span></span>
-      </button>
+      <button class="burger" aria-label="Открыть меню"><span></span></button>
     </div>
   </header>
 
-<!-- Инфо-плашка -->
-<div class="working-now-bar" id="wnb" role="status" aria-live="polite">
-  <span class="working-icon" aria-hidden="true">💧</span>
-  <span class="wnb-label">На связи 24/7</span>
-  <span class="wnb-sep">•</span>
-  <span class="wnb-addr">Пушанина 46а, Пенза</span>
-  <button class="wnb-close" aria-label="Скрыть плашку" title="Скрыть">&times;</button>
-</div>
+  <div class="working-now-bar">
+    <span style="margin-right: 8px;">💧</span> Работаем сейчас &nbsp;<span style="font-size:1.15em;">•</span>&nbsp; Пушанина 46а, Пенза
+  </div>
 
-
-  <main id="main">
+  <main>
     <section class="main-intro">
       <h1>Услуги компании «Золотарь 58»</h1>
       <p class="main-subtitle">
@@ -94,37 +74,33 @@
       </p>
     </section>
 
-    <section class="services-list" aria-label="Список услуг">
+    <section class="services-list">
       <div class="service-card">
-        <img src="septic.jpg" alt="Откачка септиков и ям" class="service-img" loading="lazy">
+        <img src="septic.jpg" alt="Откачка септиков и ям" class="service-img" loading="lazy" width="480" height="320">
         <h3>Откачка канализации и септиков</h3>
         <p>Оперативная откачка и вывоз содержимого септиков, выгребных ям, колодцев, ливнёвок и пр. Собственный автопарк.</p>
       </div>
       <div class="service-card">
-        <img src="mechanical.jpg" alt="Механическая и гидродинамическая чистка" class="service-img" loading="lazy">
+        <img src="mechanical.jpg" alt="Механическая и гидродинамическая чистка" class="service-img" loading="lazy" width="480" height="320">
         <h3>Гидродинамическая и механическая чистка</h3>
         <p>Устраняем засоры труб и канализации профессиональным оборудованием, работаем с любыми диамерами.</p>
       </div>
       <div class="service-card">
-        <img src="video.jpg" alt="Видеоинспекция труб" class="service-img" loading="lazy">
+        <img src="video.jpg" alt="Видеоинспекция труб" class="service-img" loading="lazy" width="480" height="320">
         <h3>Видеоинспекция труб</h3>
         <p>Диагностика состояния трубопроводов камерой, поиск проблем, рекомендации по ремонту.</p>
       </div>
       <div class="service-card">
-        <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img" loading="lazy">
+        <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img" loading="lazy" width="480" height="320">
         <h3>Обслуживание организаций</h3>
         <p>Официальные договоры, документы, комплексное обслуживание объектов юр. лиц и управляющих компаний.</p>
       </div>
       <div class="service-card">
-        <img src="search.jpg" alt="Аварийный выезд и поиск засоров" class="service-img" loading="lazy">
+        <img src="search.jpg" alt="Аварийный выезд и поиск засоров" class="service-img" loading="lazy" width="480" height="320">
         <h3>Аварийный выезд 24/7</h3>
         <p>Быстрая помощь при засорах, затоплениях, сбоях. Работаем по Пензе и области, без выходных.</p>
       </div>
-      <div class="service-card">
-        <img src="photo_2025-05-31_22-06-25.jpg" alt="Фотоотчет: наша техника" class="service-img" loading="lazy">
-        <h3>Реальные фото нашей работы</h3>
-        <p>Мы используем современную технику. Все фото — с реальных объектов клиентов!</p>
-      </div>
+      <!-- Карточка "Реальные фото нашей работы" удалена -->
     </section>
 
     <section class="about-text" style="margin-top: 42px;">
@@ -140,24 +116,17 @@
     </section>
   </main>
 
-  <footer class="footer" role="contentinfo">
+  <footer>
     <div class="container">
       <p class="footer-text">
-        © <span id="year"></span> Золотарь 58 — ИП Зоткин А.И. | Ассенизатор в Пензе, ул. Пушанина, 46а<br>
+        © 2025 Золотарь 58 — ИП Зоткин А.И. | Ассенизатор в Пензе, ул. Пушанина, 46а<br>
         <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">Отзывы Яндекс.Услуги</a>
       </p>
     </div>
   </footer>
 
-  <!-- Кнопка вверх -->
-  <button id="toTop" class="to-top" aria-label="Наверх" title="Наверх">
-    <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
-      <path d="M12 4l-8 8h6v8h4v-8h6z"></path>
-    </svg>
-  </button>
-
   <script>
-    // ===== Google Translate init =====
+    // Google Translate
     function googleTranslateElementInit() {
       new google.translate.TranslateElement(
         {pageLanguage: 'ru', includedLanguages: 'ru,en', autoDisplay: false},
@@ -172,10 +141,8 @@
       combo.value = lang;
       combo.dispatchEvent(new Event('change'));
       localStorage.setItem('site_lang', lang);
-      document.querySelectorAll('.lang-btn').forEach(function(b){
-        var active = b.dataset.lang === lang;
-        b.classList.toggle('active', active);
-        b.setAttribute('aria-pressed', String(active));
+      document.querySelectorAll('.lang-btn').forEach(b=>{
+        b.classList.toggle('active', b.dataset.lang === lang);
       });
       document.documentElement.setAttribute('lang', lang === 'en' ? 'en' : 'ru');
     }
@@ -186,85 +153,25 @@
       setTimeout(function(){ setLang(btn.dataset.lang); }, 50);
     });
 
-    // ===== Бургер =====
+    // Бургер
     document.addEventListener("DOMContentLoaded", function () {
-      var burger = document.querySelector('.burger');
-      var nav = document.querySelector('.nav');
+      const burger = document.querySelector('.burger');
+      const nav = document.querySelector('.nav');
       if (burger && nav) {
         burger.addEventListener('click', function () {
-          var isOpen = nav.classList.toggle('open');
-          burger.classList.toggle('active', isOpen);
-          burger.setAttribute('aria-expanded', String(isOpen));
-          document.body.classList.toggle('no-scroll', isOpen);
+          nav.classList.toggle('open');
+          burger.classList.toggle('active');
         });
         document.addEventListener('click', function (e) {
           if (!burger.contains(e.target) && !nav.contains(e.target)) {
             nav.classList.remove('open');
             burger.classList.remove('active');
-            burger.setAttribute('aria-expanded', 'false');
-            document.body.classList.remove('no-scroll');
           }
         });
       }
-
-      // Год в футере
-      var yearEl = document.getElementById('year');
-      if (yearEl) yearEl.textContent = new Date().getFullYear();
     });
-
-    // ===== Кнопка "вверх" =====
-    (function(){
-      var toTop = document.getElementById('toTop');
-      if (!toTop) return;
-      var showAt = 220;
-      function onScroll(){
-        if (window.scrollY > showAt) {
-          toTop.classList.add('to-top--visible');
-        } else {
-          toTop.classList.remove('to-top--visible');
-        }
-      }
-      window.addEventListener('scroll', onScroll, { passive: true });
-      toTop.addEventListener('click', function(){
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-      });
-      onScroll();
-    })();
   </script>
-  <!-- Скрипт Google Translate -->
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<script>
-document.addEventListener('DOMContentLoaded', function(){
-  // — Переносим любой "лишний" .lang-switcher внутрь <nav>, дубликаты удаляем
-  var nav = document.querySelector('.nav');
-  if (nav){
-    var sw = document.querySelectorAll('.lang-switcher');
-    sw.forEach(function(el, i){
-      if (!el.closest('.nav')){
-        if (!nav.querySelector('.lang-switcher')) nav.appendChild(el);
-        else el.remove();
-      }
-    });
-  }
-
-  // — Логика плашки: крестик + автоскрытие у футера
-  var bar = document.getElementById('wnb');
-  if (bar){
-    var closeBtn = bar.querySelector('.wnb-close');
-    if (closeBtn) closeBtn.addEventListener('click', function(){ bar.classList.add('wnb-hidden'); });
-
-    var footer = document.querySelector('footer, .footer');
-    if ('IntersectionObserver' in window && footer){
-      var io = new IntersectionObserver(function(entries){
-        if (!entries.length) return;
-        if (entries[0].isIntersecting) bar.classList.add('wnb-hidden');
-        else bar.classList.remove('wnb-hidden');
-      }, {threshold: 0});
-      io.observe(footer);
-    }
-  }
-});
-</script>
-
+  <div id="google_translate_element" class="visually-hidden"></div>
 </body>
 </html>
