--- a/index.html
+++ b/index.html
@@ -1,91 +1,46 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Откачка канализации Пенза 24/7 | Ассенизатор Золотарь 58 — Прочистка труб, аварийная откачка</title>
   <meta name="description" content="Профессиональная откачка канализации, септиков, выгребных ям. Прочистка труб и устранение засоров. Ассенизаторские услуги по Пензе и области 24/7. Круглосуточно.">
   <meta name="keywords" content="откачка канализации пенза, ассенизатор пенза, откачка септика, аварийная откачка, чистка выгребных ям, каналопромывка, промывка канализации, прочистка труб, аварийная служба канализации, ассенизаторские услуги пенза, канализация пенза, откачка канализации круглосуточно, прочистка канализации пенза, вызов ассенизатора пенза, срочная откачка">
+
   <meta property="og:title" content="Ассенизатор Пенза — Золотарь 58">
   <meta property="og:description" content="Откачка канализации, прочистка труб, откачка септика и выгребных ям в Пензе и области. Круглосуточно, быстро, официально.">
   <meta property="og:image" content="https://zolotar58.ru/logo.png">
   <meta property="og:url" content="https://zolotar58.ru/">
   <meta property="og:type" content="website">
   <link rel="canonical" href="https://zolotar58.ru/">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css">
-
-  <!-- Небольшие декоративные штрихи (используют твои CSS-переменные) -->
-  <style>
-    /* фон героя: мягкие «блики» + волна снизу */
-    .hero {
-      position: relative;
-      background:
-        radial-gradient(1100px 220px at 50% -60px, rgba(5,110,207,.10), transparent 60%),
-        radial-gradient(900px 200px at 10% -80px, rgba(16,116,214,.08), transparent 60%),
-        radial-gradient(900px 200px at 90% -80px, rgba(24,169,87,.07), transparent 60%);
-      border-radius: 22px;
-      padding: 38px 18px 64px;
-      box-shadow: var(--shadow-sm);
-    }
-    .hero .cta { margin-top: 12px; }
-    .hero-wave {
-      position: absolute; left: 0; right: 0; bottom: -1px; height: 48px; pointer-events: none;
-      filter: drop-shadow(0 6px 18px rgba(0,0,0,.06));
-    }
-    /* тонкие разделители между блоками */
-    .section-divider {
-      height: 14px;
-      background: linear-gradient(90deg, rgba(5,110,207,.12), rgba(5,110,207,0) 60%),
-                  linear-gradient(270deg, rgba(16,116,214,.10), rgba(16,116,214,0) 60%);
-      border-radius: 10px;
-      margin: 26px auto;
-      max-width: 980px;
-      opacity: .8;
-    }
-    /* чуть мягче карточки услуг */
-    .cards .card { backdrop-filter: blur(1px); }
-    /* мини-акцент в заголовках секций */
-    .section h2::after, .why-us h2::after, .reviews-title::after, .faq-section h2::after, .map-section h2::after{
-      content: "";
-      display: block;
-      width: 64px; height: 4px;
-      margin: 8px auto 0;
-      border-radius: 999px;
-      background: linear-gradient(90deg, var(--main-color), #4a85c7);
-      opacity: .6;
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 
   <!-- Schema.org LocalBusiness -->
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "Золотарь 58",
-    "image": "https://zolotar58.ru/logo.png",
-    "telephone": "+7-902-207-36-36",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "ул. Пушанина, 46а",
-      "addressLocality": "Пенза",
-      "addressCountry": "Россия"
-    },
-    "url": "https://zolotar58.ru/",
-    "openingHours": "24/7",
-    "priceRange": "₽₽",
-    "description": "Откачка канализации, прочистка, ассенизаторские услуги, аварийная служба в Пензе и области. Официально. Быстро. Круглосуточно."
+    "@context":"https://schema.org",
+    "@type":"LocalBusiness",
+    "name":"Золотарь 58",
+    "image":"https://zolotar58.ru/logo.png",
+    "telephone":"+7-902-207-36-36",
+    "address":{"@type":"PostalAddress","streetAddress":"ул. Пушанина, 46а","addressLocality":"Пенза","addressCountry":"Россия"},
+    "url":"https://zolotar58.ru/",
+    "openingHours":"24/7",
+    "priceRange":"₽₽",
+    "description":"Откачка канализации, прочистка, ассенизаторские услуги, аварийная служба в Пензе и области. Официально. Быстро. Круглосуточно."
   }
   </script>
 </head>
 <body>
-  <!-- Skip link -->
+  <!-- Ссылка для клавиатурной навигации -->
   <a class="skip-link" href="#main">К основному содержимому</a>
 
-  <!-- Языковой переключатель + скрытый элемент Google -->
+  <!-- Глобальный переключатель языка (на десктопе виден в шапке, на мобиле уезжает в бургер) -->
   <div class="lang-switcher" aria-label="Выбор языка">
     <button type="button" class="lang-btn" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
     <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
@@ -95,8 +50,8 @@
   <!-- Шапка -->
   <header class="header" id="sticky-header">
     <div class="container header-flex">
-      <a href="index.html" class="logo-link" aria-label="На главную">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58" width="60" height="60" loading="eager">
+      <a href="index.html" class="logo-link">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58 — ассенизаторские услуги в Пензе" width="60" height="60">
         <span class="logo-title">Золотарь 58</span>
       </a>
 
@@ -108,10 +63,10 @@
         <a href="licenses.html" class="nav-link">Сертификаты</a>
         <a href="contacts.html" class="nav-link">Контакты</a>
 
-        <!-- Переключатель языка размещён внутри меню -->
-        <div class="lang-switcher" aria-label="Выбор языка">
-          <button type="button" class="lang-btn" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
-          <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
+        <!-- Переключатель языка внутри бургера (виден только на мобилке) -->
+        <div class="lang-switcher nav-lang" aria-label="Выбор языка">
+          <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
+          <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
         </div>
       </nav>
 
@@ -121,17 +76,16 @@
     </div>
   </header>
 
-<!-- Инфо-плашка -->
-<div class="working-now-bar" id="wnb" role="status" aria-live="polite">
-  <span class="working-icon" aria-hidden="true">💧</span>
-  <span class="wnb-label">На связи 24/7</span>
-  <span class="wnb-sep">•</span>
-  <span class="wnb-addr">Пушанина 46а, Пенза</span>
-  <button class="wnb-close" aria-label="Скрыть плашку" title="Скрыть">&times;</button>
-</div>
+  <!-- Плашка «на связи 24/7» -->
+  <div class="working-now-bar" role="status" aria-live="polite">
+    <span class="emoji" aria-hidden="true">💧</span>
+    На связи 24/7
+    <span class="wnb-sep">•</span>
+    <span class="wnb-addr">Пушанина 46а, Пенза</span>
+    <button class="wnb-close" type="button" aria-label="Скрыть уведомление">×</button>
+  </div>
 
-
-  <!-- Основной контент -->
+  <!-- Контент -->
   <main id="main">
     <section class="hero container">
       <h1>Откачка канализации и прочистка труб в Пензе 24/7</h1>
@@ -140,11 +94,11 @@
         <b>Золотарь 58</b> — профессиональная откачка канализации, выгребных ям и септиков по Пензе и области.
         Современное оборудование, быстрый выезд <b>24/7</b>. Официально, без посредников, с гарантией результата.
       </p>
-      <a class="cta btn btn--primary" href="tel:+79022073636" aria-label="Позвонить Золотарь 58 по номеру +7-902-207-36-36">
+      <a class="cta btn btn--primary" href="tel:+79022073636" aria-label="Позвонить по номеру +7-902-207-36-36">
         Позвонить: +7-902-207-36-36
       </a>
 
-      <!-- волна под героем -->
+      <!-- декоративная волна -->
       <svg class="hero-wave" viewBox="0 0 1440 60" preserveAspectRatio="none" aria-hidden="true">
         <path fill="url(#g1)" d="M0,20 C220,60 520,-20 740,20 C980,64 1150,20 1440,38 L1440,60 L0,60 Z"></path>
         <defs>
@@ -158,23 +112,40 @@
 
     <div class="section-divider" aria-hidden="true"></div>
 
-    <!-- SEO блок Услуг -->
+    <!-- Наши услуги (эмодзи + центрированный заголовок) -->
     <section class="services-section section">
       <div class="container">
-        <h2>Наши услуги</h2>
-        <ul class="services-list cards">
-          <li class="card">Откачка канализации (Пенза и область)</li>
-          <li class="card">Откачка и чистка септиков</li>
-          <li class="card">Аварийная откачка выгребных ям</li>
-          <li class="card">Прочистка и промывка труб</li>
-          <li class="card">Гидродинамическая промывка канализации</li>
-          <li class="card">Обслуживание частных домов, организаций и предприятий</li>
-          <li class="card">Срочный выезд аварийной службы канализации</li>
+        <h2 class="section-title center">Наши услуги</h2>
+
+        <ul class="services-list cards services-emoji">
+          <li class="card">
+            <span class="svc-emoji" aria-hidden="true">💧</span>
+            <span class="svc-text">Откачка канализации (Пенза и область)</span>
+          </li>
+          <li class="card">
+            <span class="svc-emoji" aria-hidden="true">🧼</span>
+            <span class="svc-text">Откачка и чистка септиков</span>
+          </li>
+          <li class="card">
+            <span class="svc-emoji" aria-hidden="true">🚨</span>
+            <span class="svc-text">Аварийная откачка выгребных ям</span>
+          </li>
+          <li class="card">
+            <span class="svc-emoji" aria-hidden="true">🛠️</span>
+            <span class="svc-text">Прочистка и промывка труб</span>
+          </li>
+          <li class="card">
+            <span class="svc-emoji" aria-hidden="true">🌀</span>
+            <span class="svc-text">Гидродинамическая промывка канализации</span>
+          </li>
+          <li class="card">
+            <span class="svc-emoji" aria-hidden="true">🏠</span>
+            <span class="svc-text">Обслуживание частных домов, организаций и предприятий</span>
+          </li>
         </ul>
       </div>
     </section>
 
-    <!-- Почему мы -->
     <section class="why-us section section--alt">
       <div class="container">
         <h2>Почему выбирают нас</h2>
@@ -182,7 +153,7 @@
           <li><span class="usp-icon" aria-hidden="true">🚚</span><b>Быстрый выезд</b> — оперативная подача машины, 24/7 по Пензе и области.</li>
           <li><span class="usp-icon" aria-hidden="true">🛠️</span><b>Профессиональное оборудование</b> — гидродинамика, механика, видеоинспекция.</li>
           <li><span class="usp-icon" aria-hidden="true">💼</span><b>Работа с организациями</b> — заключаем официальные договоры, выдаём документы.</li>
-          <li><span class="usp-icon" aria-hidden="true">💳</span><b>Удобная оплата</b> — наличные и безналичный расчет.</li>
+          <li><span class="usp-icon" aria-hidden="true">💳</span><b>Удобная оплата</b> — наличные и безналичный расчёт.</li>
           <li><span class="usp-icon" aria-hidden="true">✅</span><b>Гарантия</b> — вы всегда получаете честный результат и чистую систему!</li>
         </ul>
       </div>
@@ -190,7 +161,7 @@
 
     <div class="section-divider" aria-hidden="true"></div>
 
-    <!-- Слайдер отзывов -->
+    <!-- Отзывы -->
     <section class="reviews-section section">
       <div class="container">
         <div class="reviews-slider" role="region" aria-label="Отзывы наших клиентов">
@@ -264,7 +235,7 @@
       </div>
     </section>
 
-    <!-- Яндекс карта (как на контактах) -->
+    <!-- Карта -->
     <section class="map-section section">
       <div class="container">
         <h2>Где мы работаем</h2>
@@ -286,21 +257,20 @@
         © <span id="year"></span> Золотарь 58 — ИП Зоткин А.И. | Ассенизатор в Пензе, ул. Пушанина, 46а<br>
         <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener nofollow">Отзывы Яндекс.Услуги</a> |
         <a href="https://go.2gis.com/YrK6Y" target="_blank" rel="noopener nofollow">2ГИС</a> |
-        <a href="https://www.avito.ru/penza/predlozheniya_uslug/prochistka_kanalizatsii_ustranenie_zasorov_3980560866" target="_blank" rel="noopener nofollow">Avito</a>
+        <a href="https://www.avito.ru/penza/predlozheniya_uslug/prochistka_kanalizatsii_ustranenie_zasorov_3980560866" target="_blank" rel="noopener nofollow">Avito</a><br>
+        <a class="footer-phone" href="tel:+79022073636">+7 (902) 207-36-36</a>
       </p>
     </div>
   </footer>
 
   <!-- Кнопка вверх -->
   <button id="toTop" class="to-top" aria-label="Наверх" title="Наверх">
-    <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
-      <path d="M12 4l-8 8h6v8h4v-8h6z"></path>
-    </svg>
+    <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 4l-8 8h6v8h4v-8h6z"></path></svg>
   </button>
 
   <!-- Скрипты -->
   <script>
-    // ===== Google Translate init =====
+    // Google Translate init
     function googleTranslateElementInit() {
       new google.translate.TranslateElement(
         {pageLanguage: 'ru', includedLanguages: 'ru,en', autoDisplay: false},
@@ -329,7 +299,7 @@
       setTimeout(function(){ setLang(btn.dataset.lang); }, 50);
     });
 
-    // ===== Бургер меню =====
+    // Бургер
     document.addEventListener("DOMContentLoaded", function() {
       var burger = document.querySelector('.burger');
       var nav = document.querySelector('.nav');
@@ -350,30 +320,21 @@
         });
       }
 
-      // ===== Слайдер отзывов =====
+      // Слайдер отзывов
       var reviews = document.querySelectorAll('.review-item');
       var dots = document.querySelectorAll('.slider-dot');
       var current = 0;
-
       function showReview(idx) {
         reviews.forEach(function(el, i){
           el.classList.toggle('active', i === idx);
           if (dots[i]) dots[i].classList.toggle('active', i === idx);
         });
       }
-
       dots.forEach(function(dot, i){
-        dot.addEventListener('click', function(){
-          current = i;
-          showReview(current);
-        });
+        dot.addEventListener('click', function(){ current = i; showReview(current); });
       });
-
       if (reviews.length > 1) {
-        setInterval(function(){
-          current = (current + 1) % reviews.length;
-          showReview(current);
-        }, 6000);
+        setInterval(function(){ current = (current + 1) % reviews.length; showReview(current); }, 6000);
       }
 
       // Год в футере
@@ -381,60 +342,25 @@
       if (yearEl) yearEl.textContent = new Date().getFullYear();
     });
 
-    // ===== Кнопка "вверх" =====
+    // Кнопка «вверх»
     (function(){
       var toTop = document.getElementById('toTop');
       if (!toTop) return;
-      var showAt = 220;
-      function onScroll(){
-        if (window.scrollY > showAt) {
-          toTop.classList.add('to-top--visible');
-        } else {
-          toTop.classList.remove('to-top--visible');
-        }
-      }
+      function onScroll(){ toTop.classList.toggle('to-top--visible', window.scrollY > 220); }
       window.addEventListener('scroll', onScroll, { passive: true });
-      toTop.addEventListener('click', function(){
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-      });
+      toTop.addEventListener('click', function(){ window.scrollTo({ top: 0, behavior: 'smooth' }); });
       onScroll();
+    })();
+
+    // Плашка «на связи 24/7» — закрытие на мобиле
+    (function(){
+      var bar = document.querySelector('.working-now-bar');
+      var btn = document.querySelector('.wnb-close');
+      if (!bar || !btn) return;
+      btn.addEventListener('click', function(){ bar.classList.add('wnb-hidden'); });
     })();
   </script>
 
-  <!-- Скрипт Google Translate -->
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<script>
-document.addEventListener('DOMContentLoaded', function(){
-  // — Переносим любой "лишний" .lang-switcher внутрь <nav>, дубликаты удаляем
-  var nav = document.querySelector('.nav');
-  if (nav){
-    var sw = document.querySelectorAll('.lang-switcher');
-    sw.forEach(function(el, i){
-      if (!el.closest('.nav')){
-        if (!nav.querySelector('.lang-switcher')) nav.appendChild(el);
-        else el.remove();
-      }
-    });
-  }
-
-  // — Логика плашки: крестик + автоскрытие у футера
-  var bar = document.getElementById('wnb');
-  if (bar){
-    var closeBtn = bar.querySelector('.wnb-close');
-    if (closeBtn) closeBtn.addEventListener('click', function(){ bar.classList.add('wnb-hidden'); });
-
-    var footer = document.querySelector('footer, .footer');
-    if ('IntersectionObserver' in window && footer){
-      var io = new IntersectionObserver(function(entries){
-        if (!entries.length) return;
-        if (entries[0].isIntersecting) bar.classList.add('wnb-hidden');
-        else bar.classList.remove('wnb-hidden');
-      }, {threshold: 0});
-      io.observe(footer);
-    }
-  }
-});
-</script>
-
 </body>
 </html>
